added hovers, transitions and shadows to buttons

--- a/buttons.html
+++ b/buttons.html
@@ -8,6 +8,19 @@
         border-radius: 2px;
         cursor: pointer;
         margin-right: 8px;
+        transition: opacity 0.2s;
+    }
+</style>
+
+<style>
+    .sub-button:hover{
+        opacity: 0.6;
+    }
+</style>
+
+<style>
+    .sub-button:active {
+        opacity: 0.4;
     }
 </style>
 
@@ -24,6 +37,22 @@
         border-radius: 2px;
         cursor: pointer;
         margin-right: 8px;
+        transition: opacity 0.2s,
+                    background-color 0.2s,
+                    color 0.2s;
+    }
+</style>
+
+<style>
+    .join-button:hover {
+        background-color: rgb(0, 140, 255);
+        color: white;
+    }
+</style>
+
+<style>
+    .join-button:active {
+        opacity: 0.7;
     }
 </style>
 
@@ -38,6 +67,14 @@
         cursor: pointer;
         font-weight: bold;
         font-size: 15px;
+        transition: box-shadow 0.2s;
+    }
+</style>
+
+<style>
+    .twt-button:hover {
+        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15);
+
     }
 </style>
 
