--- a/text.html
+++ b/text.html
@@ -2,9 +2,10 @@
     @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
     p {
-        font-family: "Source Code Pro";
+        font-family: Arial, Helvetica, sans-serif;
         margin-top : 0;
         margin-bottom : 0;
+        transition: text-decoration 0.2s;
     }
 
     .video-title {
@@ -27,16 +28,32 @@
         margin-bottom: 20px;
     }
 
-</style>
-
-<style>
     .video-desc {
         font-family: "Source Code Pro";
         font-size: 14px;
         color: rgb(96, 96, 96);
         width: 280px;;
         line-height: 22px;
+        margin-bottom: 100px;
     }
+
+    .apple-text {
+        margin-bottom: 50px;
+        font-size: 14px;
+        background-color: rgb(227, 65, 64);
+        color: white;
+        text-align: center;
+        padding: 18px;
+    }
+
+    .shop-link {
+        cursor: pointer;
+    }
+   
+    .shop-link:hover {
+        text-decoration: underline;
+    }
+
 </style>
 
 <p class="video-title">
@@ -53,4 +70,8 @@
 
 <p class="video-desc">
     Talking tech and AI on the heels of Google I/O. Also a daily driver phone reveal from Google's CEO. Shoutout to Sundar!
+</p>
+
+<p class="apple-text">
+    Shop early for the best selection of holiday favourites. <span class="shop-link">Shop now &#62;</span>
 </p>
